remove the question mark

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body class="flex bg-gray-600 flex-col h-full">
     <!-- Header -->
-        <header class="font-semibold text-5xl tracking-tight">About Your Birthday?</header>
+        <header class="font-semibold text-5xl tracking-tight">About Your Birthday</header>
     <br>
         <!-- Header End -->
         <!-- Birthday Container for User Criteria -->
